Implement a bunch of intellij recommendations